--- a/TestingPower/TestingPower.csproj
+++ b/TestingPower/TestingPower.csproj
@@ -57,19 +57,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutomateWPR.cs" />
-    <Compile Include="ScenarioFacebook.cs" />
-    <Compile Include="ScenarioGmail.cs" />
-    <Compile Include="ScenarioMsn.cs" />
-    <Compile Include="ScenarioMsnbc.cs" />
-    <Compile Include="ScenarioOutlook.cs" />
-    <Compile Include="ScenarioReddit.cs" />
-    <Compile Include="ScenarioWikipedia.cs" />
-    <Compile Include="ScenarioYoutube.cs" />
+    <Compile Include="Scenarios\FacebookNewsfeedScroll.cs" />
+    <Compile Include="Scenarios\GmailGoThroughEmails.cs" />
+    <Compile Include="Scenarios\Msn.cs" />
+    <Compile Include="Scenarios\Msnbc.cs" />
+    <Compile Include="Scenarios\OutlookViewEmails.cs" />
+    <Compile Include="Scenarios\RedditSearchSubreddit.cs" />
+    <Compile Include="Scenarios\WikipediaUnitedStates.cs" />
+    <Compile Include="Scenarios\ScenarioYoutube.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scenario.cs" />
-    <Compile Include="ScenarioAmazon.cs" />
-    <Compile Include="ScenarioGoogle.cs" />
+    <Compile Include="Scenarios\AmazonSearch.cs" />
+    <Compile Include="Scenarios\GoogleSearch.cs" />
     <Compile Include="UserInfo.cs" />
   </ItemGroup>
   <ItemGroup>
