Removed the CNN scenario from the official runs.
Clarified the steps in the CNN scenario.

Included the updated csproj file to include the CnnTopStory.cs file.

--- a/TestingPower/TestingPower.csproj
+++ b/TestingPower/TestingPower.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutomateWPR.cs" />
+    <Compile Include="Scenarios\CnnTopStory.cs" />
     <Compile Include="Scenarios\FacebookNewsfeedScroll.cs" />
     <Compile Include="Scenarios\GmailGoThroughEmails.cs" />
     <Compile Include="Scenarios\Msn.cs" />
