Fixed cnn scenario to find top story element consistently.
Added TechRadar scenario

Added error check to the scenario remaining time duration calculation.

Added cnn and techRadar scenarios to the 'all' scenario

--- a/TestingPower/TestingPower.csproj
+++ b/TestingPower/TestingPower.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Scenarios\Msnbc.cs" />
     <Compile Include="Scenarios\OutlookViewEmails.cs" />
     <Compile Include="Scenarios\RedditSearchSubreddit.cs" />
+    <Compile Include="Scenarios\TechRadarSurfacePro4Review.cs" />
     <Compile Include="Scenarios\WikipediaUnitedStates.cs" />
     <Compile Include="Scenarios\YoutubeWatchVideo.cs" />
     <Compile Include="Program.cs" />
