Added functionality for dumping ETL events to csv, extracting E3 energy events from a csv, processing the energy event data and dumping the data to a csv file.

--- a/TestingPower/TestingPower.csproj
+++ b/TestingPower/TestingPower.csproj
@@ -57,6 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutomateWPR.cs" />
+    <Compile Include="AutomateXPerf.cs" />
+    <Compile Include="E3Events.cs" />
+    <Compile Include="EnergyDataProcessor.cs" />
     <Compile Include="Scenarios\CnnTopStory.cs" />
     <Compile Include="Scenarios\FacebookNewsfeedScroll.cs" />
     <Compile Include="Scenarios\GmailGoThroughEmails.cs" />
