--- a/TestingPower/TestingPower/TestingPower.csproj
+++ b/TestingPower/TestingPower/TestingPower.csproj
@@ -59,7 +59,10 @@
     <Compile Include="AutomateWPR.cs" />
     <Compile Include="AutomateXPerf.cs" />
     <Compile Include="E3Events.cs" />
+    <Compile Include="ElevatorClient.cs" />
+    <Compile Include="ElevatorMock.cs" />
     <Compile Include="EnergyDataProcessor.cs" />
+    <Compile Include="IElevatorClient.cs" />
     <Compile Include="Scenarios\CnnTopStory.cs" />
     <Compile Include="Scenarios\FacebookNewsfeedScroll.cs" />
     <Compile Include="Scenarios\GmailGoThroughEmails.cs" />
