Refactored entire project.
Moved command line argument parsing from Program to the new Arguments class.

Modified WebDriver helper functions to be extensions to the RemoteWebDriver class and moved them from Program to the new RemoteWebDriverExtensions class.

Updated scenarios to use the modified RemoteWebDriver Extensions.

Moved main code flow from main() to a new class ScenarioRunner.

--- a/TestingPower/TestingPower.csproj
+++ b/TestingPower/TestingPower.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ElevatorClient">
-      <HintPath>..\..\..\elevator\ElevatorClient\bin\Debug\ElevatorClient.dll</HintPath>
+      <HintPath>..\..\Elevator\ElevatorClient\bin\Debug\ElevatorClient.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -60,9 +60,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arguments.cs" />
     <Compile Include="AutomateXPerf.cs" />
     <Compile Include="E3Events.cs" />
     <Compile Include="EnergyDataProcessor.cs" />
+    <Compile Include="RemoteWebDriverExtension.cs" />
+    <Compile Include="ScenarioRunner.cs" />
     <Compile Include="Scenarios\CnnTopStory.cs" />
     <Compile Include="Scenarios\FacebookNewsfeedScroll.cs" />
     <Compile Include="Scenarios\GmailGoThroughEmails.cs" />
