--- a/TestingPower/TestingPower.csproj
+++ b/TestingPower/TestingPower.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Arguments.cs" />
     <Compile Include="AutomateXPerf.cs" />
+    <Compile Include="Scenarios\CnnOneStory.cs" />
     <Compile Include="Scenarios\BbcNews.cs" />
     <Compile Include="Scenarios\YahooNews.cs" />
     <Compile Include="E3Events.cs" />
