--- a/TestingPower/TestingPower.csproj
+++ b/TestingPower/TestingPower.csproj
@@ -62,7 +62,7 @@
   <ItemGroup>
     <Compile Include="Arguments.cs" />
     <Compile Include="AutomateXPerf.cs" />
-    <Compile Include="FastScenario.cs" />
+    <Compile Include="Scenarios\FastScenario.cs" />
     <Compile Include="Scenarios\CnnOneStory.cs" />
     <Compile Include="Scenarios\BbcNews.cs" />
     <Compile Include="Scenarios\YahooNews.cs" />
