--- a/BrowserEfficiencyTest/config.json
+++ b/BrowserEfficiencyTest/config.json
@@ -3,5 +3,11 @@
     "Domain": "<matching domain>",
     "UserName": "<userName>",
     "Password": "<password>"
+  },
+  {
+    "Domain": "slack.com",
+    "UserName": "iecompat@gmail.com",
+    "Password": "EdgeRock10!"  
   }
+
 ]
