some updates to make the tests work
Update to enable HWA and make sure the same code works in Edge, Chrome,
and HWA

--- a/BrowserEfficiencyTest/config.json
+++ b/BrowserEfficiencyTest/config.json
@@ -1,3 +1,4 @@
+
 [
   {
     "Domain": "<matching domain>",
@@ -7,7 +8,7 @@
   {
     "Domain": "slack.com",
     "UserName": "iecompat@gmail.com",
-    "Password": "EdgeRock10!"  
+    "Password": "[INSERTPASSWORD]"  
   }
 
 ]
