--- a/BrowserEfficiencyTest/packages.config
+++ b/BrowserEfficiencyTest/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
-  <package id="Selenium.Support" version="2.53.1" targetFramework="net46" />
-  <package id="Selenium.WebDriver" version="2.53.1" targetFramework="net46" />
+  <package id="Selenium.WebDriver" version="3.0.0-beta3" targetFramework="net46" />
 </packages>
