Fixed DiskUsage measure set to ignore disk usage data from writing the ETL file. Changed metric to be entire system disk usage instead of per process.

--- a/PerfProcessor/PerfProcessor.csproj
+++ b/PerfProcessor/PerfProcessor.csproj
@@ -51,7 +51,11 @@
     <Compile Include="MeasureSets\RefSet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="MeasureSetDefinitionAssets\ActiveRegion.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <None Include="MeasureSetDefinitionAssets\CpuUsage.wpaProfile">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
