Addressing PR feedback
* changing variable "d" to "driver"
* changing JSON property "UserName" to "Username"
* making classes internal
* Forgot to specify _logins as private in CredentialManager

--- a/BrowserEfficiencyTest/config.json
+++ b/BrowserEfficiencyTest/config.json
@@ -1,7 +1,7 @@
 [
   {
-    "Domain": "<matching domain>",
-    "UserName": "<userName>",
-    "Password": "<password>"
+    "Domain": "example.com",
+    "Username": "user@example.com",
+    "Password": "password"
   }
 ]
