--- a/PerfProcessor/PerfProcessor.csproj
+++ b/PerfProcessor/PerfProcessor.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AutomateWPAExporter.cs" />
     <Compile Include="MeasureSets\CpuUsage.cs" />
     <Compile Include="MeasureSets\DiskUsage.cs" />
+    <Compile Include="MeasureSets\EnergyVerbose.cs" />
     <Compile Include="PerfProcessor.cs" />
     <Compile Include="MeasureSet.cs" />
     <Compile Include="MeasureSets\NetworkUsage.cs" />
