Allow flag to override credentials.json path
Now the user can provide a flag (eg. `-credentialpath
..\some\path\mycredentials.json`) to specify credentials defined
somewhere else

+ Changes to docs to update name change. config.json -> credentials.json

--- a/BrowserEfficiencyTest/BrowserEfficiencyTest.csproj
+++ b/BrowserEfficiencyTest/BrowserEfficiencyTest.csproj
@@ -96,7 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="config.json">
+    <None Include="credentials.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
