Changed all scenario names to match their respective class and file names.
Fixed entering scenario names on command line to be case invariant.

--- a/BrowserEfficiencyTest/BrowserEfficiencyTest.csproj
+++ b/BrowserEfficiencyTest/BrowserEfficiencyTest.csproj
@@ -79,7 +79,7 @@
     <Compile Include="Scenarios\OutlookEmail.cs" />
     <Compile Include="Scenarios\OutlookOffice.cs" />
     <Compile Include="Scenarios\PinterestExplore.cs" />
-    <Compile Include="Scenarios\PowerBIBrowse.cs" />
+    <Compile Include="Scenarios\PowerBiBrowse.cs" />
     <Compile Include="Scenarios\TumblrTrending.cs" />
     <Compile Include="Scenarios\TwitterPublic.cs" />
     <Compile Include="Scenarios\YahooNews.cs" />
