--- a/BrowserEfficiencyTest/BrowserEfficiencyTest.csproj
+++ b/BrowserEfficiencyTest/BrowserEfficiencyTest.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="Arguments.cs" />
     <Compile Include="CredentialManager.cs" />
+    <Compile Include="ResponsivenessTimer.cs" />
     <Compile Include="Scenarios\AboutBlank.cs" />
     <Compile Include="Scenarios\AzureDashboard.cs" />
     <Compile Include="Scenarios\EspnHomepage.cs" />
