Added Scholastic scenario

--- a/BrowserEfficiencyTest/BrowserEfficiencyTest.csproj
+++ b/BrowserEfficiencyTest/BrowserEfficiencyTest.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Scenarios\OutlookOffice.cs" />
     <Compile Include="Scenarios\PinterestExplore.cs" />
     <Compile Include="Scenarios\PowerBiBrowse.cs" />
+    <Compile Include="Scenarios\ScholasticHarryPotter.cs" />
     <Compile Include="Scenarios\TumblrTrending.cs" />
     <Compile Include="Scenarios\TwitterPublic.cs" />
     <Compile Include="Scenarios\YahooNews.cs" />
