--- a/PerfProcessor/PerfProcessor.csproj
+++ b/PerfProcessor/PerfProcessor.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutomateWPAExporter.cs" />
+    <Compile Include="MeasureSets\CpuUsageVerbose.cs" />
     <Compile Include="MeasureSets\CpuUsage.cs" />
     <Compile Include="MeasureSets\DiskUsage.cs" />
     <Compile Include="MeasureSets\EnergyVerbose.cs" />
